# mimo

./: .gitmodules  CMakeLists.txt
examples/: CMakeLists.txt  fork.cpp  join.cpp  linear.cpp  mixed_synchrony.cpp  split.cpp
examples/entities/: Integer.h
examples/steps/: Capture.h  Fork.h  Multiply.h  Print.h  Range.h  Release.h  Sink.h
include/: AsynchronousJobManager.h  Engine.h  Entity.h  Factory.h  IFactory.h  IJob.h  IJobManager.h  IJobManagerFactory.h  IQueueFactory.h  Job.h  JobFactory.h  JobInputFactory.h  JobManager.h  JobManagerFactory.h  JobOutputFactory.h  Pipeline.h  Queue.h  QueueFactory.h  QueuePusher.h  SingleJobManagerFactory.h  Step.h  StepFactory.h  SynchronousJobManager.h  Workflow.h  errors.h
include/entities/: Integer.h
include/interfaces/: IQueue.h  IQueueFactory.h
include/job_depots/: AsynchronousJobDepot.h  IMultiJobDepotFactory.h  ISingleJobDepotFactory.h  JobDepot.h  MultiJobDepotFactory.h  SingleJobDepotFactory.h  SynchronousJobDepot.h
include/job_managers/: IJobManager.h  IMultiJobManagerFactory.h  ISingleJobManagerFactory.h  JobManager.h  MultiJobManagerFactory.h  SingleJobManagerFactory.h  SynchronousJobManager.h
include/mimo/: Engine.h  Entity.h  IInputs.h  IOutputs.h  Inputs.h  Outputs.h  Step.h
include/queues/: IJobInputs.h  IJobOutputs.h  IQueue.h  IQueueBundle.h  InputQueue.h  Inputs.h  JobInputs.h  JobOutputs.h  OutputQueue.h  Outputs.h  Queue.h  QueueBundle.h  QueueBundleFactory.h  QueueChannel.h  QueueFactory.h  QueuePusher.h
include/steps/: Print.h  Range.h  Sink.h
include/streams/: Capture.h  Print.h  Range.h  Release.h  Sink.h
src/: AsynchronousJobManager.cpp  Engine.cpp  Entity.cpp  Factory.h  IFactory.h  IForwardIterator.h  IJob.h  Job.cpp  Job.h  JobComparator.cpp  JobComparator.h  JobFactory.cpp  JobFactory.h  JobInputFactory.cpp  JobManager.cpp  JobManagerFactory.cpp  JobOutputFactory.cpp  Pipeline.cpp  Queue.cpp  QueueFactory.cpp  QueuePusher.cpp  Step.cpp  StepFactory.cpp  SynchronousJobManager.cpp  Workflow.cpp  worker.cpp
src/depots/: IJobDepot.h  IJobDepotFactory.h  IMultiJobDepot.h  IMultiJobDepotFactory.h  ISingleJobDepot.h  MultiJobDepot.cpp  MultiJobDepot.h  MultiJobDepotFactory.cpp  MultiJobDepotFactory.h  SingleJobDepot.cpp  SingleJobDepot.h  SingleJobDepotFactory.h
src/entities/: Integer.cpp
src/job_depots/: AsynchronousJobDepot.cpp  AsynchronousJobDepot.h  IJobDepot.h  IMultiJobDepot.h  IMultiJobDepotFactory.h  ISingleJobDepotFactory.h  JobDepot.cpp  JobDepot.h  MultiJobDepot.h  MultiJobDepotFactory.cpp  MultiJobDepotFactory.h  SingleJobDepot.h  SingleJobDepotFactory.cpp  SingleJobDepotFactory.h  SynchronousJobDepot.cpp  SynchronousJobDepot.h
src/job_managers/: AsynchronousJobManager.cpp  JobManager.cpp  MultiJobManagerFactory.cpp  SingleJobManagerFactory.cpp  SynchronousJobManager.cpp
src/queues/: IInputs.cpp  IOutputs.cpp  IQueue.h  IQueueBundle.h  IQueueBundleFactory.h  InputQueue.cpp  Inputs.cpp  Inputs.h  JobInputFactory.cpp  JobInputs.cpp  JobOutputFactory.cpp  JobOutputs.cpp  OutputQueue.cpp  Outputs.cpp  Queue.cpp  Queue.h  QueueBundle.cpp  QueueBundle.h  QueueBundleFactory.cpp  QueueBundleFactory.h  QueueChannel.cpp  QueueChannel.h  QueueFactory.cpp  QueueFactory.h  QueuePusher.cpp
tests/: CMakeLists.txt  JobTest.cpp  MultiJobDepotTest.cpp  QueueBundleTest.cpp  QueueTest.cpp  SingleJobDepotTest.cpp  test_AsynchronousJobDepot.cpp  test_AsynchronousJobManager.cpp  test_Entity.cpp  test_Inputs.cpp  test_Job.cpp  test_JobDepot.cpp  test_JobDepotFactory.cpp  test_JobFactory.cpp  test_JobInputs.cpp  test_JobManager.cpp  test_JobManagerFactory.cpp  test_JobOutputs.cpp  test_Outputs.cpp  test_Queue.cpp  test_QueueBundle.cpp  test_QueueChannel.cpp  test_QueuePusher.cpp  test_Step.cpp  test_StepFactory.cpp  test_Stream.cpp  test_SynchronousJobDepot.cpp  test_SynchronousJobManager.cpp
tests/mocks/: MockFactory.h  MockJob.h  MockJobDepot.h  MockJobFactory.h  MockJobInputs.h  MockJobInputsFactory.h  MockJobManager.h  MockJobManagerFactory.h  MockJobOutputs.h  MockJobOutputsFactory.h  MockQueue.h  MockQueueBundle.h  MockQueueBundleFactory.h  MockQueueFactory.h  MockSingleJobDepot.h  MockSingleJobDepotFactory.h  MockSingleJobManagerFactory.h  MockStep.h
